--- a/vignettes/UKgrid_vignette.Rmd
+++ b/vignettes/UKgrid_vignette.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Vignette Title"
-author: "Vignette Author"
+title: "Introduction for the UKgrid Dataset"
+author: "Rami Krispin (@Rami_Krispin)"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
