--- a/vignettes/UKgrid_vignette.Rmd
+++ b/vignettes/UKgrid_vignette.Rmd
@@ -33,8 +33,8 @@ install.packages("UKgrid")
 or install the development version from [Github](https://github.com/RamiKrispin/UKgrid):
 
 ```{r eval=FALSE, message=TRUE, warning=TRUE, include=TRUE}
-# install.packages("devtools")
-devtools::install_github("RamiKrispin/UKgrid")
+# install.packages("remotes")
+remotes::install_github("RamiKrispin/UKgrid")
 ```
 
 ### Usage
